# Verum-core

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260901_01_initial.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  inventory.py  product.py  products.py  warehouses.py
app/core/: config.py  db.py  security.py  tenant.py
app/events/: outbox.py
app/models/: __init__.py  base.py  entities.py  product.py
app/repositories/: inventory_repo.py  product_repo.py  warehouse_repo.py
app/schemas/: auth.py  common.py  inventory.py  product.py  warehouse.py
app/services/: auth_service.py  inventory_service.py  product_service.py  warehouse_service.py
app/tests/: test_inventory_flow.py  test_smoke.py
